# im-switch.nvim

./: .markdownlint-cli2.yaml  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: auto-commit.yml  ci-auto-commit.yml  integration.yml  panvimdoc.yml  release.yml  rust-ci.yml  test.yml  unittest.yml
doc/: im-switch.nvim.txt
lua/: build.lua  im-switch.lua  ime-switch-win.lua  ime-switch.lua  utils.lua
lua/im-switch/: build.lua  health.lua  im.lua  init.lua  options.lua  types.lua  utils.lua
lua/im-switch/utils/: im_command.lua  init.lua  notify.lua  os.lua  path.lua  rust.lua  system.lua
plugin/: ime-switch-win.lua
scripts/: test
src/: lib.rs  main.rs  windows.rs
src/macos/: args.rs  error.rs  im.rs  ime.rs  input_method.rs  mod.rs
src/util/: mod.rs  warning_collector.rs
src/windows/: args.rs  error.rs  im.rs  input_method.rs  mod.rs
tests/: build_spec.lua  im_command_spec.lua  im_operations.rs  im_spec.lua  minit.lua  options_spec.lua  wsl2_spec.lua
tests/lua/: im_command_spec.lua  im_spec.lua  minimal_init.lua  os_spec.lua  path_spec.lua
tests/lua/integration/: build_spec.lua
tests/lua/unittest/: im_command_spec.lua  path_spec.lua  rust_spec.lua
tests/macos/: mod.rs  tests.rs
tests/windows/: mod.rs  tests.rs
