[package]
name = "im-switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.60"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_Ime",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.0"
libc = "0.2.153"

[target.'cfg(target_os = "macos")'.dependencies.icrate]
version = "0.1.0"
features = [
  "Foundation_NSThread",
  "AppKit",
  "AppKit_NSTextView",
  "AppKit_NSTextInputContext",
]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }

[dev-dependencies]
serial_test = "*"
