[package]
name = "im-switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.60"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_Ime",
]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread"] }
objc2-app-kit = { version = "0.3", features = [
  "NSTextView",
  "NSTextInputContext",
] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
serial_test = "*"
