[package]
name = "im-switch"
version = "1.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/drop-stones/im-switch.nvim"
description = "A command-line utility for switching input methods (IM) in Rust"
rust-version = "1.93.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_Ime",
]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread"] }
objc2-app-kit = { version = "0.3", features = [
  "NSTextView",
  "NSTextInputContext",
] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libtest-mimic = "0.8"
thiserror = "2"

[[test]]
name = "im_operations"
harness = false
